# voice-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup_models.py
.github/workflows/: perf_ci.yml
benchmarks/: run_wer.py
data/sample_tests/: en_sample.csv
tests/: test_audio_player_sync.py  test_barge_in_resume.py  test_config.py  test_conversation_history.py  test_grpc_server.py  test_kv_cache_integration.py  test_llm_client.py  test_piper_timeout.py  test_sentence_chunker.py  test_skills.py  test_skills_e2e.py  test_speech_buffer_cap.py  test_vad.py
voice_assistant/: config.py  main.py  telemetry.py
voice_assistant.egg-info/: PKG-INFO  requires.txt
voice_assistant/asr/: __init__.py  partial.py  stream.py  vad.py
voice_assistant/llm/: __init__.py  client.py  history.py  kv_cache.py  speculative.py
voice_assistant/nlu/: __init__.py  classifier.py
voice_assistant/pipeline/: interrupt.py  orchestrator.py
voice_assistant/skills/: __init__.py  greeting.py  play_music.py  registry.py  stop.py  weather.py
voice_assistant/transport/: grpc_server.py  voice_assistant.proto  voice_assistant_pb2.py  voice_assistant_pb2_grpc.py  webrtc.py
voice_assistant/tts/: player.py  queue.py  stream.py
voice_assistant/wakeword/: __init__.py  detector.py
