[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-assistant"
version = "0.1.0"
description = "Real-time streaming voice assistant with ASR, LLM token streaming, and chunked TTS"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "voice-assistant" }]
dependencies = [
    # --- Core Utilities ---
    "python-dotenv",      # Manages environment variables

    # --- Audio Processing & Playback ---
    "pyaudio",            # Microphone input streaming
    "sounddevice",        # High-quality audio output
    "numpy",              # Handles audio data as arrays

    # --- AI & Machine Learning Inference ---
    "llama-cpp-python",   # Local LLM runner (GGUF support)

    # --- Transport & Remote Inference (gRPC) ---
    "grpcio",             # Core gRPC framework
    "grpcio-tools",       # Tools for generating protobuf stubs
]

[project.optional-dependencies]
# --- Development & Quality Assurance ---
dev = [
    "pytest",             # Framework for unit testing
]

[project.optional-dependencies]
cuda = ["llama-cpp-python[cuda]>=0.3.0"]
metal = ["llama-cpp-python[metal]>=0.3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
